--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.EatSight"
+        android:theme="@style/Theme.Material3.DayNight"
         tools:targetApi="31">
         <activity
             android:name=".ui.result.ResultActivity"
